Added observations doc, continued EDA and train/test/validation split

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def json_to_csv(input_file, output_file, line_limit=None):\n",
+    "def json_to_csv(input_file, output_file, line_start, line_end):\n",
     "    \"\"\"\n",
     "    Converts a JSON-like file (or a .gz file containing JSON-like data) with dictionaries on each line into a CSV file.\n",
     "\n",
@@ -60,7 +60,9 @@
     "\n",
     "        with open_file(input_file, 'rt', encoding='utf-8') as file:\n",
     "            for i, line in enumerate(file):\n",
-    "                if line_limit and i >= line_limit:  # Stop after reaching the line limit\n",
+    "                if i < line_start:\n",
+    "                    continue\n",
+    "                if i >= line_end:  # Stop after reaching the line limit\n",
     "                    break\n",
     "                try:\n",
     "                    line = line.strip().rstrip(',')  # Remove whitespace and trailing commas\n",
@@ -91,23 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data successfully written to ratebeer_20k.csv.\n"
+      "CSV file 'ratebeer_train.csv' already exists. Skipping conversion.\n",
+      "CSV file 'ratebeer_validation.csv' already exists. Skipping conversion.\n",
+      "CSV file 'ratebeer_test.csv' already exists. Skipping conversion.\n"
      ]
     }
    ],
    "source": [
-    "input_file = 'ratebeer.json.gz'\n",
-    "output_file = 'ratebeer_20k.csv'\n",
-    "line_limit = 20000\n",
+    "input_file = 'ratebeer.json'\n",
+    "output_file_train = 'ratebeer_train.csv'\n",
+    "output_file_validation = 'ratebeer_validation.csv'\n",
+    "output_file_test = 'ratebeer_test.csv'\n",
     "\n",
-    "json_to_csv(input_file, output_file, line_limit)"
+    "json_to_csv(input_file, output_file_train, 0, 180000)\n",
+    "json_to_csv(input_file, output_file_validation, 180000, 200000)\n",
+    "json_to_csv(input_file, output_file_test, 200000, 220000)"
    ]
   },
   {
@@ -126,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zb/tch3ppv12fg978rk_n82sf300000gn/T/ipykernel_78219/3369730761.py:1: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('ratebeer_train.csv')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -251,12 +266,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                            beer/name  beer/beerId  beer/brewerId beer/ABV  \\\n",
-       "0            John Harvards Simcoe IPA        63836           8481      5.4   \n",
-       "1            John Harvards Simcoe IPA        63836           8481      5.4   \n",
-       "2       John Harvards Cristal Pilsner        71716           8481        5   \n",
-       "3  John Harvards Fancy Lawnmower Beer        64125           8481      5.4   \n",
-       "4  John Harvards Fancy Lawnmower Beer        64125           8481      5.4   \n",
+       "                            beer/name beer/beerId  beer/brewerId beer/ABV  \\\n",
+       "0            John Harvards Simcoe IPA       63836           8481      5.4   \n",
+       "1            John Harvards Simcoe IPA       63836           8481      5.4   \n",
+       "2       John Harvards Cristal Pilsner       71716           8481        5   \n",
+       "3  John Harvards Fancy Lawnmower Beer       64125           8481      5.4   \n",
+       "4  John Harvards Fancy Lawnmower Beer       64125           8481      5.4   \n",
        "\n",
        "                     beer/style review/appearance review/aroma review/palate  \\\n",
        "0  India Pale Ale &#40;IPA&#41;               4/5         6/10           3/5   \n",
@@ -280,19 +295,19 @@
        "4  On tap at the Springfield, PA location. Poured...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('ratebeer_20k.csv')\n",
+    "df = pd.read_csv('ratebeer_train.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -300,25 +315,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20000 entries, 0 to 19999\n",
+      "RangeIndex: 180000 entries, 0 to 179999\n",
       "Data columns (total 13 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   beer/name           20000 non-null  object\n",
-      " 1   beer/beerId         20000 non-null  int64 \n",
-      " 2   beer/brewerId       20000 non-null  int64 \n",
-      " 3   beer/ABV            20000 non-null  object\n",
-      " 4   beer/style          20000 non-null  object\n",
-      " 5   review/appearance   20000 non-null  object\n",
-      " 6   review/aroma        20000 non-null  object\n",
-      " 7   review/palate       20000 non-null  object\n",
-      " 8   review/taste        20000 non-null  object\n",
-      " 9   review/overall      20000 non-null  object\n",
-      " 10  review/time         20000 non-null  int64 \n",
-      " 11  review/profileName  20000 non-null  object\n",
-      " 12  review/text         19953 non-null  object\n",
-      "dtypes: int64(3), object(10)\n",
-      "memory usage: 2.0+ MB\n"
+      " #   Column              Non-Null Count   Dtype \n",
+      "---  ------              --------------   ----- \n",
+      " 0   beer/name           180000 non-null  object\n",
+      " 1   beer/beerId         180000 non-null  object\n",
+      " 2   beer/brewerId       180000 non-null  int64 \n",
+      " 3   beer/ABV            180000 non-null  object\n",
+      " 4   beer/style          180000 non-null  object\n",
+      " 5   review/appearance   180000 non-null  object\n",
+      " 6   review/aroma        180000 non-null  object\n",
+      " 7   review/palate       180000 non-null  object\n",
+      " 8   review/taste        180000 non-null  object\n",
+      " 9   review/overall      180000 non-null  object\n",
+      " 10  review/time         180000 non-null  int64 \n",
+      " 11  review/profileName  180000 non-null  object\n",
+      " 12  review/text         179804 non-null  object\n",
+      "dtypes: int64(2), object(11)\n",
+      "memory usage: 17.9+ MB\n"
      ]
     }
    ],
@@ -328,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +367,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>beer/beerId</th>\n",
        "      <th>beer/brewerId</th>\n",
        "      <th>review/time</th>\n",
        "    </tr>\n",
@@ -360,69 +374,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>20000.00000</td>\n",
-       "      <td>20000.000000</td>\n",
-       "      <td>2.000000e+04</td>\n",
+       "      <td>180000.000000</td>\n",
+       "      <td>1.800000e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>34339.39055</td>\n",
-       "      <td>2248.659500</td>\n",
-       "      <td>1.197787e+09</td>\n",
+       "      <td>2128.656489</td>\n",
+       "      <td>1.209006e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>41020.66295</td>\n",
-       "      <td>2667.682527</td>\n",
-       "      <td>8.294843e+07</td>\n",
+       "      <td>2932.221422</td>\n",
+       "      <td>8.035252e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>51.00000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>9.567072e+08</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.564480e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>53.00000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>1.143590e+09</td>\n",
+       "      <td>395.000000</td>\n",
+       "      <td>1.155341e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>14228.00000</td>\n",
-       "      <td>1179.000000</td>\n",
-       "      <td>1.206230e+09</td>\n",
+       "      <td>1158.000000</td>\n",
+       "      <td>1.217808e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>63820.00000</td>\n",
-       "      <td>3324.000000</td>\n",
-       "      <td>1.264378e+09</td>\n",
+       "      <td>2554.000000</td>\n",
+       "      <td>1.276387e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>162988.00000</td>\n",
-       "      <td>13519.000000</td>\n",
-       "      <td>1.326326e+09</td>\n",
+       "      <td>13874.000000</td>\n",
+       "      <td>1.326413e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        beer/beerId  beer/brewerId   review/time\n",
-       "count   20000.00000   20000.000000  2.000000e+04\n",
-       "mean    34339.39055    2248.659500  1.197787e+09\n",
-       "std     41020.66295    2667.682527  8.294843e+07\n",
-       "min        51.00000      12.000000  9.567072e+08\n",
-       "25%        53.00000      12.000000  1.143590e+09\n",
-       "50%     14228.00000    1179.000000  1.206230e+09\n",
-       "75%     63820.00000    3324.000000  1.264378e+09\n",
-       "max    162988.00000   13519.000000  1.326326e+09"
+       "       beer/brewerId   review/time\n",
+       "count  180000.000000  1.800000e+05\n",
+       "mean     2128.656489  1.209006e+09\n",
+       "std      2932.221422  8.035252e+07\n",
+       "min         1.000000  9.564480e+08\n",
+       "25%       395.000000  1.155341e+09\n",
+       "50%      1158.000000  1.217808e+09\n",
+       "75%      2554.000000  1.276387e+09\n",
+       "max     13874.000000  1.326413e+09"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,35 +439,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "beer/name              0\n",
-       "beer/beerId            0\n",
-       "beer/brewerId          0\n",
-       "beer/ABV               0\n",
-       "beer/style             0\n",
-       "review/appearance      0\n",
-       "review/aroma           0\n",
-       "review/palate          0\n",
-       "review/taste           0\n",
-       "review/overall         0\n",
-       "review/time            0\n",
-       "review/profileName     0\n",
-       "review/text           47\n",
+       "beer/name               0\n",
+       "beer/beerId             0\n",
+       "beer/brewerId           0\n",
+       "beer/ABV                0\n",
+       "beer/style              0\n",
+       "review/appearance       0\n",
+       "review/aroma            0\n",
+       "review/palate           0\n",
+       "review/taste            0\n",
+       "review/overall          0\n",
+       "review/time             0\n",
+       "review/profileName      0\n",
+       "review/text           196\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of unique beers in train data: 7694\n",
+      "Average no. of reviews per beer: 23.394853132310892\n",
+      "No. of unique users: 9224\n",
+      "Average no. of reviews per user: 19.514310494362533\n",
+      "No. of unique breweries: 545\n",
+      "Average no. of reviews per brewer: 330.27522935779814\n",
+      "No. of rows: 180000\n",
+      "No. of cols: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_beers = df['beer/beerId'].nunique()\n",
+    "print(\"No. of unique beers in train data: \" + str(num_beers))\n",
+    "\n",
+    "avg_reviews_per_beer = df.groupby('beer/beerId').size().mean()\n",
+    "print(\"Average no. of reviews per beer: \" + str(avg_reviews_per_beer))\n",
+    "\n",
+    "num_users = df['review/profileName'].nunique()\n",
+    "print(\"No. of unique users: \" + str(num_users))\n",
+    "\n",
+    "avg_reviews_per_user = df.groupby('review/profileName').size().mean()\n",
+    "print(\"Average no. of reviews per user: \" + str(avg_reviews_per_user))\n",
+    "\n",
+    "num_brewers = df['beer/brewerId'].nunique()\n",
+    "print(\"No. of unique breweries: \" + str(num_brewers))\n",
+    "\n",
+    "avg_reviews_per_brewer = df.groupby('beer/brewerId').size().mean()\n",
+    "print(\"Average no. of reviews per brewer: \" + str(avg_reviews_per_brewer))\n",
+    "\n",
+    "shape = df.shape\n",
+    "\n",
+    "print(f\"No. of rows: {shape[0]}\")\n",
+    "print(f\"No. of cols: {shape[1]}\")"
    ]
   },
   {
@@ -483,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -497,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
