--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zb/tch3ppv12fg978rk_n82sf300000gn/T/ipykernel_78219/3369730761.py:1: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\mattq\\AppData\\Local\\Temp\\ipykernel_17228\\3369730761.py:1: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('ratebeer_train.csv')\n"
      ]
     },
@@ -295,7 +295,7 @@
        "4  On tap at the Springfield, PA location. Poured...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "max     13874.000000  1.326413e+09"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -529,12 +529,89 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "from sklearn import linear_model\n",
+    "from textblob import TextBlob\n",
+    "import numpy as np\n",
+    "from csv import DictReader\n",
+    "\n",
+    "# Load training data\n",
+    "trainData = []\n",
+    "with open('ratebeer_train.csv', 'r') as f:\n",
+    "    dict_reader = DictReader(f)\n",
+    "    trainData = list(dict_reader)\n",
+    "\n",
+    "# Use library to get sentiment\n",
+    "def feature(datum):\n",
+    "    blob = TextBlob(datum['review/text'])\n",
+    "    return blob.sentiment.polarity\n",
+    "\n",
+    "# Convert 'X/20' format to float\n",
+    "def floatRating(datum):\n",
+    "    return (float(datum['review/overall'].split('/')[0])*.05)\n",
+    "\n",
+    "# Train linear model\n",
+    "polarities = [feature(d) for d in trainData]\n",
+    "ratings = [floatRating(d) for d in trainData]\n",
+    "\n",
+    "X = np.array([[1,p] for p in polarities])\n",
+    "Y = np.array(ratings).T\n",
+    "\n",
+    "model = linear_model.LinearRegression(fit_intercept=False)\n",
+    "model.fit(X, Y)\n",
+    "\n",
+    "y_pred = np.array(model.predict(X))\n",
+    "sse = sum([x**2 for x in (Y - y_pred)])\n",
+    "mse = sse / len(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.015543805789271206\n",
+      "[0.64719316 0.76859969 0.6828643  0.70820972 0.68544715]\n",
+      "[0.65 0.75 0.55 0.65 0.85]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load validation set\n",
+    "validationData = []\n",
+    "with open('ratebeer_validation.csv', 'r') as f:\n",
+    "    dict_reader = DictReader(f)\n",
+    "    validationData = list(dict_reader)\n",
+    "\n",
+    "polarities = [feature(d) for d in validationData]\n",
+    "ratings = [floatRating(d) for d in validationData]\n",
+    "\n",
+    "X = np.array([[1,p] for p in polarities])\n",
+    "Y = np.array(ratings).T\n",
+    "\n",
+    "#Round predicition to nearest X/20\n",
+    "# def roundPrediction(p):\n",
+    "#     return round(p * 20) / 20\n",
+    "\n",
+    "y_pred = np.array(model.predict(X))\n",
+    "sse = sum([x**2 for x in (Y - y_pred)])\n",
+    "mse = sse / len(Y)\n",
+    "print(mse)\n",
+    "\n",
+    "print(y_pred[:5])\n",
+    "print(Y[:5])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
