added surprise predictor

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -4,19 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "### Package Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import csv\n",
     "import os\n",
-    "import gzip"
+    "import gzip\n",
+    "import random\n",
+    "from collections import defaultdict\n",
+    "import math\n",
+    "import numpy as np"
    ]
   },
   {
@@ -50221,6 +50225,81 @@
     "\n",
     "mse = np.mean((np.array(y) - np.array(y_pred)) ** 2)\n",
     "print(f\"Mean Squared Error: {mse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 5.0232\n",
+      "SVD Model Mean Squared Error: 5.023185802713436\n",
+      "\n",
+      "Comparison of Actual vs Predicted Ratings:\n",
+      "User ID | Beer ID | Actual Rating | Predicted Rating\n",
+      "doubleo | 84476 | 17.00 | 15.35\n",
+      "bierkoning | 112095 | 13.00 | 12.10\n",
+      "thedm | 7717 | 11.00 | 11.32\n",
+      "brainlair | 122499 | 15.00 | 14.43\n",
+      "grant | 34227 | 13.00 | 11.62\n",
+      "Drew | 64044 | 12.00 | 14.28\n",
+      "italarican | 130823 | 14.00 | 13.46\n",
+      "doublebock | 110727 | 20.00 | 17.31\n",
+      "daknole | 46662 | 13.00 | 10.17\n",
+      "TET | 2530 | 18.00 | 16.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from surprise import SVD, Dataset, Reader\n",
+    "from surprise.model_selection import train_test_split\n",
+    "from surprise import accuracy\n",
+    "\n",
+    "train_df = pd.read_csv('ratebeer_train.csv')\n",
+    "\n",
+    "# Convert ratings from \"X/Y\" format to a float\n",
+    "def convert_rating(rating):\n",
+    "    try:\n",
+    "        numerator, denominator = map(float, rating.split('/'))\n",
+    "        return numerator  # Keep it on the original scale (e.g., 1-20)\n",
+    "    except ValueError:\n",
+    "        return None\n",
+    "\n",
+    "# Apply the conversion function to the 'review/overall' column\n",
+    "train_df['review/overall'] = train_df['review/overall'].apply(convert_rating)\n",
+    "\n",
+    "# Drop any rows with invalid ratings\n",
+    "train_df = train_df.dropna(subset=['review/overall'])\n",
+    "\n",
+    "# Prepare data for Surprise library\n",
+    "reader = Reader(rating_scale=(1, 20))\n",
+    "data = Dataset.load_from_df(train_df[['review/profileName', 'beer/beerId', 'review/overall']], reader)\n",
+    "\n",
+    "# Train SVD model\n",
+    "trainset, testset = train_test_split(data, test_size=0.1)\n",
+    "svd_model = SVD()\n",
+    "svd_model.fit(trainset)\n",
+    "\n",
+    "# Predict ratings on the validation set\n",
+    "predictions = svd_model.test(testset)\n",
+    "\n",
+    "# Calculate Mean Squared Error\n",
+    "mse = accuracy.mse(predictions)\n",
+    "print(f\"SVD Model Mean Squared Error: {mse}\")\n",
+    "\n",
+    "print(\"\\nComparison of Actual vs Predicted Ratings:\")\n",
+    "print(\"User ID | Beer ID | Actual Rating | Predicted Rating\")\n",
+    "for i, prediction in enumerate(predictions[:10]):  # Print only the first 10 predictions\n",
+    "    user_id = prediction.uid\n",
+    "    item_id = prediction.iid\n",
+    "    actual_rating = prediction.r_ui\n",
+    "    predicted_rating = prediction.est\n",
+    "    print(f\"{user_id} | {item_id} | {actual_rating:.2f} | {predicted_rating:.2f}\")"
    ]
   }
  ],
